# packingsolver

./: .bazelrc  .buildinfo  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  NOTES  NOTES_async_robustness.md  NOTES_resource_limits.md  NOTES_scale_capacity.md  README.md  WORKSPACE  box.html  boxstacks.html  genindex.html  index.html  irregular.html  lp_minimize_shrinkage.html  objectives.html  objects.inv  onedimensional.html  optimization_modes.html  rectangle.html  rectangleguillotine.html  requirements.txt  results.ods  results_rectangleguillotine.ods  search.html  searchindex.js  solution.json
src/algorithms/: CMakeLists.txt  column_generation.hpp  common.cpp  dichotomic_search.hpp  sequential_value_correction.hpp  thread_pool.hpp
src/box/: CMakeLists.txt  algorithm_formatter.cpp  block.cpp  block.hpp  branching_scheme.cpp  branching_scheme.hpp  branching_scheme_maximal_spaces.cpp  branching_scheme_maximal_spaces.hpp  dual_feasible_functions.cpp  dual_feasible_functions.hpp  instance.cpp  instance_builder.cpp  instance_flipper.cpp  instance_flipper.hpp  main.cpp  optimize.cpp  post_process.cpp  solution.cpp  solution_builder.cpp  solution_builder.hpp  tree_search.cpp  tree_search.hpp  tree_search_maximal_spaces.cpp  tree_search_maximal_spaces.hpp
src/boxstacks/: CMakeLists.txt  algorithm_formatter.cpp  branching_scheme.cpp  branching_scheme.hpp  instance.cpp  instance_builder.cpp  instance_flipper.cpp  instance_flipper.hpp  main.cpp  optimize.cpp  post_process.cpp  sequential_onedimensional_rectangle.cpp  sequential_onedimensional_rectangle.hpp  solution.cpp  solution_builder.cpp  solution_builder.hpp  tree_search.cpp  tree_search.hpp
src/irregular/: CMakeLists.txt  algorithm_formatter.cpp  branching_scheme.cpp  branching_scheme.hpp  convert.cpp  convert.hpp  convert_main.cpp  covering_with_rectangles.cpp  covering_with_rectangles.hpp  fill_solution_file_main.cpp  instance.cpp  instance_builder.cpp  large_item_first.cpp  large_item_first.hpp  large_neighborhood_search.cpp  large_neighborhood_search.hpp  linear_programming.cpp  linear_programming.hpp  local_search.cpp  local_search.hpp  main.cpp  milp_raster.cpp  milp_raster.hpp  nlp.cpp  optimize.cpp  periodic_packing.cpp  periodic_packing.hpp  polygon_convex_hull.cpp  polygon_convex_hull.hpp  polygon_simplification.cpp  polygon_simplification.hpp  polygon_trapezoidation.cpp  polygon_trapezoidation.hpp  post_process.cpp  rotations.cpp  rotations.hpp  sequential_feasibility.cpp  sequential_feasibility.hpp  shape.cpp  shape.hpp  (+30 more)
src/onedimensional/: CMakeLists.txt  algorithm_formatter.cpp  branching_scheme.cpp  branching_scheme.hpp  instance.cpp  instance_builder.cpp  main.cpp  milp_assignment.cpp  milp_assignment.hpp  optimize.cpp  post_process.cpp  solution.cpp  solution_builder.cpp  solution_builder.hpp  tree_search.cpp  tree_search.hpp
src/rectangle/: CMakeLists.txt  algorithm_formatter.cpp  benders_decomposition.cpp  benders_decomposition.hpp  block.cpp  block.hpp  branching_scheme.cpp  branching_scheme.hpp  branching_scheme_maximal_spaces.cpp  branching_scheme_maximal_spaces.hpp  dual_feasible_functions.cpp  dual_feasible_functions.hpp  instance.cpp  instance_builder.cpp  instance_flipper.cpp  instance_flipper.hpp  main.cpp  optimize.cpp  post_process.cpp  solution.cpp  solution_builder.cpp  solution_builder.hpp  tree_search.cpp  tree_search.hpp  tree_search_maximal_spaces.cpp  tree_search_maximal_spaces.hpp
src/rectangleguillotine/: CMakeLists.txt  algorithm_formatter.cpp  block.cpp  block.hpp  branching_scheme.cpp  branching_scheme.hpp  branching_scheme_maximal_spaces.cpp  branching_scheme_n.cpp  column_generation_2.cpp  column_generation_2.hpp  column_generation_strips.cpp  column_generation_strips.hpp  dynamic_programming_infinite_copies_array.cpp  dynamic_programming_infinite_copies_array.hpp  instance.cpp  instance_builder.cpp  instance_flipper.cpp  instance_flipper.hpp  labeling.cpp  labeling.hpp  main.cpp  optimize.cpp  post_process.cpp  sequential_feasibility.cpp  sequential_feasibility.hpp  sequential_strips_onedimensional.cpp  sequential_strips_onedimensional.hpp  solution.cpp  solution_builder.cpp  solution_builder.hpp  tree_search.cpp  tree_search.hpp  tree_search_hypergraph.cpp  tree_search_hypergraph.hpp  tree_search_hypergraph_infinite_copies.cpp  tree_search_hypergraph_infinite_copies.hpp  tree_search_maximal_spaces.cpp  tree_search_maximal_spaces.hpp
test/box/: CMakeLists.txt  box_test.cpp  tree_search_test.cpp
test/boxstacks/: CMakeLists.txt  boxstacks_test.cpp
test/irregular/: CMakeLists.txt  irregular_test.cpp  linear_programming_test.cpp  periodic_packing_test.cpp  polygon_convex_hull_test.cpp  polygon_trapezoidation_test.cpp  rotations_test.cpp  shape_convex_hull_test.cpp  shape_element_intersections_test.cpp  shape_extract_borders_test.cpp  shape_inflate_test.cpp  shape_self_intersections_removal_test.cpp  shape_supports_test.cpp  shape_test.cpp  shape_trapezoidation_test.cpp  trapezoid_test.cpp  tree_search_test.cpp  trivial_test.cpp
test/onedimensional/: CMakeLists.txt  milp_assignment_test.cpp  onedimensional_test.cpp
test/rectangle/: CMakeLists.txt  benders_decomposition_test.cpp  rectangle_test.cpp  sequential_value_correction_test.cpp
test/rectangle/branching_scheme/: defects_test.cpp  test.cpp
test/rectangle/tree_search/: test.cpp  tree_search_test.cpp
test/rectangleguillotine/: CMakeLists.txt  column_generation_2_test.cpp  column_generation_strips_test.cpp  dynamic_programming_infinite_copies_array_test.cpp  labeling_test.cpp  post_process_test.cpp  rectangleguillotine_test.cpp  sequential_strips_onedimensional_test.cpp  tree_search_hypergraph_infinite_copies_test.cpp  tree_search_hypergraph_test.cpp
test/rectangleguillotine/branching_scheme/: add_test.cpp  branching_scheme_test.cpp  cut_thickness_test.cpp  cut_through_defect_test.cpp  defect_test.cpp  insertion_test.cpp  integration_test.cpp  trim_test.cpp  waste_test.cpp
test/rectangleguillotine/tree_search/: add_test.cpp  cut_thickness_test.cpp  cut_through_defect_test.cpp  cutting_cost_test.cpp  (+6 more)
(+30009 files in other folders)
